test/instance-checks-6.err.expect
test/instance-checks-6.ktn:1:1: error: cannot solve scalar type constraint t1 (type var a of example) = Int (output of example)
test/instance-checks-6.ktn:1:1: note: t1 (type var a of example) is from here
test/instance-checks-6.ktn:1:13: note: Int (output of example) is from here
