test/instance-checks-6.ktn
define example @a (a -> int) { }
